add user model + swagger + TU
