# docs/swagger.json
@@ -1,22 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is an API for creating hash in order to create keypasses.",
-        "title": "Swagger For Keypass API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
-        "version": "1.0"
+        "contact": {}
     },
-    "host": "localhost:9090",
-    "basePath": "/v1",
     "paths": {
         "/users": {
             "post": {
@@ -34,7 +20,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/Models.User"
                         }
                     }
                 ],
@@ -42,7 +28,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/Models.User"
                         }
                     },
                     "400": {
@@ -56,7 +42,7 @@
         },
         "/users/{uuid}": {
             "get": {
-                "description": "get a User by ID",
+                "description": "get user by id",
                 "consumes": [
                     "application/json"
                 ],
@@ -76,7 +62,7 @@
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/Models.User"
                         }
                     },
                     "400": {
@@ -96,25 +82,22 @@
         }
     },
     "definitions": {
-        "model.User": {
+        "Models.User": {
             "type": "object",
             "properties": {
-                "creation_date": {
+                "address": {
                     "type": "string"
                 },
                 "email": {
                     "type": "string"
                 },
-                "first_name": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
                     "type": "string"
                 },
-                "last_name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "uuid": {
+                "phone": {
                     "type": "string"
                 }
             }
